# md2slack

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.specify/bugs/: 001.md
.specify/drafts/: 001-project-foundation-plan-prompt.md  001-project-foundation-specify-prompt.md  002-testing-foundation-plan-prompt.md  002-testing-foundation-specify-prompt.md  003-core-converter-plan-prompt.md  003-core-converter-specify-prompt.md  004-convert-command-plan-prompt.md  004-convert-command-specify-prompt.md  005-slack-integration-plan-prompt.md  005-slack-integration-specify-prompt.md  006-auto-chunking-plan-prompt.md  006-auto-chunking-specify-prompt.md  007-default-chunking-plan-prompt.md  007-default-chunking-specify-prompt.md  008-line-range-selection-plan-prompt.md  008-line-range-selection-specify-prompt.md
.specify/features/: 001-project-foundation.md  002-testing-foundation.md  003-core-converter.md  004-convert-command.md  005-slack-integration.md  006-auto-chunking.md  007-default-chunking.md  008-line-range-selection.md
.specify/memory/: constitution.md
.specify/templates/: feature-brief-template.md  plan-prompt-template.md  specify-prompt-template.md
specs/001-project-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-testing-foundation/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-core-converter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_chunker.py  test_cli.py  test_converter.py  test_slack.py  test_tables.py
(+51 files in other folders)
